--- a/english.html
+++ b/english.html
@@ -8971,7 +8971,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200308170940719" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200315170320757" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8980,7 +8980,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Iry claims]] [[Chocolate fudge]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9000,7 +9000,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200313121100589" title="$:/temp/search">
+<div created="20161023184814872" modified="20200315170952235" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9302,8 +9302,25 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200219184254185" modified="20200219184347405" tags="[[Iry claims]]" title="Alexander Technique">
+<div created="20200219184254185" modified="20200315170655758" tags="[[Iry claims]]" title="Alexander Technique">
 <pre>[img[pictures/shitat-alexander.jpg]]
+
+
+!!![[Iry]]:
+
+In my teenage years I've suffered from painful backaches, that turned out to be scoliosis, the result of a fastened growth. Between the age of 14 and 15 I became 12 centimeter taller, 172 centimeter over all. My mom took me to all kinds of doctors and methods, and that’s how I heard about the [[Alexander technique|https://en.wikipedia.org/wiki/Alexander_Technique]] for the first time.
+
+[[Alexander|F.M.Alexander]], who had a voice disorder, found out that the cause is a defect in his physical mental behavior.
+
+It was decided pretty fast that I would have to wear a back brace in order to straighten my back and I put the Alexander technique aside. In the end of my military service the backaches were back, so I've decided to go back, and since then I practice it once a week, and even lay my back by myself every day. It took me more than a year until I succeeded to understand the three elementary directions which are the basis to the whole technique:
+
+Let the [[neck|Necks]] be free
+
+To let the head go forward and up.
+
+To let the back lengthen and widen.
+
+
 
 
  &lt;&lt;heblink [[שיטת אלכסנדר]]&gt;&gt;
@@ -9622,9 +9639,31 @@ Is where I want to be
 
  &lt;&lt;heblink [[ביורק]]&gt;&gt;</pre>
 </div>
-<div created="20200306151232240" modified="20200306151351913" tags="[[Vegan recipes]] Recipes [[Food addicts]] [[Iry claims]]" title="Blended soup">
+<div created="20200306151232240" modified="20200315180205237" tags="[[Vegan recipes]] Recipes [[Food addicts]] [[Iry claims]]" title="Blended soup">
 <pre>[img[pictures/marak-tachoon.jpg]]
 
+
+!!![[Iry]]:
+
+
+I've came to a conclusion, that you should leave a whole vegetable slice in a blended soup, like you leave in a wall an exposed brick in the memorial of the destruction of the temple. 
+
+That what I've done here:
+
+1.	Wash and cut an amount of half the size of the pot of:
+
+Carrot, zucchini, celery stick, dried pea, leek
+
+2.	Cover it with water and cook it until it's all soft
+
+3.	Turn the heat off and let the vegetables cool
+
+4.	Use a hand blender to blend it (don't forget to leave a whole slice of vegetable)
+
+ 
+5.	Add a little more water, put the pot back on the stove and cook it until it boils. Turn down the heat
+
+6.	Spice it with coarse sea salt, grounded black pepper, half a little spoon of spicy oil, 2-3 drops of thick balsamic sauce, cook it for another 10--20 minutes, spice again in the case of need.
 
 
  &lt;&lt;heblink [[מרק טחון]]&gt;&gt;</pre>
@@ -9913,8 +9952,45 @@ Yours- Dandan.
  &lt;&lt;heblink [[עוגיות שוקולד צ'יפס]]&gt;&gt;
 </pre>
 </div>
-<div created="20200307170911921" modified="20200307171038929" tags="[[Iry claims]] Recipes Baking [[Food addicts]]" title="Chocolate fudge">
+<div created="20200307170911921" modified="20200315190437755" tags="[[Iry claims]] Recipes Baking [[Food addicts]]" title="Chocolate fudge">
 <pre>[img[pictures/chocolate-fudge.jpg]]
+
+
+!!![[Iry]]:
+
+My favorite mission at Genevieve's kitchen is the making of personal dishes of chocolate fudge. A mission that Sonia passed to Yoyo before me, and to me once I've earned it. I love chocolate, and yesterday I made an amount that was enough for five different soufflé dishes. I went all the way (in a way that water in the oven adds moisture and therefore fudginess to the fudge) and put water in the baking dish. The baked chocolate cracked open and it was thrilling.
+
+The recipe:
+
+•	180 g dark chocolate
+
+•	160 g butter
+
+•	200 g sugar
+
+•	3 eggs
+
+•	3 yolks
+
+•	20 g cornflower
+
+•	A bit of alcohol (I used marsala wine) 
+
+The making process:
+
+1.	Melt the chocolate and the butter and beat it with a whisk to a smooth cream 
+
+2.	Add the sugar and beat well
+
+3.	Add the eggs and the yolks one by one and beat
+
+4.	Mix in the cornflower and the alcohol
+
+5.	Heat the oven to  200 degrees 
+
+6.	Pour the batter to the dishes
+
+7.	Bake for ten minutes, lower the heat to 170 degrees and bake for 20-30 more minutes
 
 
  &lt;&lt;heblink [[שוקולד פאדג']]&gt;&gt;
