--- a/index.html
+++ b/index.html
@@ -9188,7 +9188,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אירי טוענת]] [[שוקולד פאדג']] [[איזדורה דאנקן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9208,7 +9208,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200313121633944" title="$:/temp/search">
+<div created="20161023184814872" modified="20200315170933759" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -19133,12 +19133,12 @@ Fapina''
 [img[pictures/qJoUOLqvuzPjy1Pr.jpg]]
 </pre>
 </div>
-<div created="20180620184300136" modified="20200307171133654" tags="[[חיות אוכל]] [[אירי טוענת]] מתכונים אפייה" title="שוקולד פאדג'">
+<div created="20180620184300136" modified="20200315190544788" tags="[[חיות אוכל]] [[אירי טוענת]] מתכונים אפייה" title="שוקולד פאדג'">
 <pre>[img[pictures/chocolate-fudge.jpg]]
 
 !!![[אירי]]:
 
-התפקיד האהוב עלי בעבודה אצל ז'נבייב הוא הכנת מנות אישיות של שוקולד פאדג'. תפקיד [[שסוניה|סוניה]] העבירה [[ליויו|יויו]] לפני, ועכשיו גם אלי אחר כבוד. אני מתה על שוקולד, ואתמול הכנתי כאן בבית מנה אחת שהספיקה לארבע צלחות של קרם ברולה בקוטר של 12 סנטימטרים. הלכתי עד הסוף, (מהבחינה שמים בתנור מוסיפים לחות ולכן פאדג'יות לפאדג'), ושמתי מעט מים בתבנית. השוקולד האפוי התבקע וזה היה מרגש ממש.
+התפקיד האהוב עלי בעבודה אצל ז'נבייב הוא הכנת מנות אישיות של שוקולד פאדג'. תפקיד [[שסוניה|סוניה]] העבירה [[ליויו|יויו]] לפני, ועכשיו גם אלי אחר כבוד. אני מתה על שוקולד, ואתמול הכנתי כאן בבית מנה אחת שהספיקה לחמישה כלים אישיים של סופלה. הלכתי עד הסוף, (מהבחינה שמים בתנור מוסיפים לחות ולכן פאדג'יות לפאדג'), ושמתי מעט מים בתבנית. השוקולד האפוי התבקע וזה היה מרגש ממש.
 
 המתכון:
 
@@ -19278,7 +19278,7 @@ Fapina''
 &lt;&lt;englink [[Siach Cafe]]&gt;&gt;
 </pre>
 </div>
-<div created="20161206222443036" modified="20200219184437433" tags="[[אירי טוענת]]" title="שיטת אלכסנדר">
+<div created="20161206222443036" modified="20200315170746908" tags="[[אירי טוענת]]" title="שיטת אלכסנדר">
 <pre>[img[pictures/shitat-alexander.jpg]]
 
 !!![[אירי]]:
@@ -19288,7 +19288,7 @@ Fapina''
 
 [[אלכסנדר|פ.מ.אלכסנדר]], שלקה בקולו, גילה שהדבר נובע מליקוי בהתנהגותו הגופנית והנפשית. 
 
-די מהר הוחלט שאצטרך ללבוש סד שיישר את גבי ונטשתי גם את האלכסנדר. בסוף השרות הצבאי הכאבים חזרו, החלטתי לנסות שוב את השיטה, ומאז אני הולכת כל שבוע לשיעור, ואף מניחה את הגב מידי יום בעצמי. לקח לי לפחות שנה עד שהצלחתי להבין את שלושת המשפטים הבסיסיים עליהם מושתתת העבודה כולה:
+די מהר הוחלט שאצטרך ללבוש סד שיישר את גבי ונטשתי גם את האלכסנדר. בסוף השרות הצבאי הכאבים חזרו, החלטתי לנסות שוב את השיטה, ומאז אני הולכת כל שבוע לשיעור, ואף מניחה את הגב מידי יום בעצמי. לקח לי לפחות שנה עד שהצלחתי להבין את שלושת משפטי הכוונים הבסיסיים, עליהם מושתתת העבודה כולה:
 
 להניח [[לצוואר|צווארים]] להיות חופשי
 
