--- a/index.html
+++ b/index.html
@@ -9188,7 +9188,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אירי טוענת]] [[שוקולד פאדג']] [[איזדורה דאנקן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12245,9 +12245,12 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20161111215423587" modified="20200202190744006" tags="[[קופים ממונעים]]" title="האחיות כהן">
+<div created="20161111215423587" modified="20200318155653693" tags="[[קופים ממונעים]]" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
+
+
+&lt;&lt;englink [[Coen Sisters]]&gt;&gt;
 
 
 !!![[יויו]]:
