--- a/index.html
+++ b/index.html
@@ -1071,6 +1071,8 @@ Error message and password prompt
 
 <li>סבתא שלנו</li>
 
+<li>סגירים</li>
+
 <li>סדרות</li>
 
 <li>סולטנה</li>
@@ -9188,7 +9190,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="סגירים [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10591,7 +10593,7 @@ well,
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20200216152012505" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
+<div created="20171216194951924" modified="20200318190310882" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה]]:
@@ -16398,6 +16400,19 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 זו תמיד תישאר תעלומה, למרות שיש אפשרויות לתשובה, אבל זו בהחלט שאלה - איך מאדם שמח, טוב לב וסבלני כמו סבתא יצאה אישה כמו [[אימא שלנו|דינה זכרה לברכה]].
 
 </pre>
+</div>
+<div created="20200318190000717" modified="20200318190443482" tags="[[בדרך לאן שהוא]] סדרות טלוויזיה סרטים" title="סגירים">
+<pre>
+[img[pictures/closers.jpg]]
+
+!!![[גורה]]:
+
+
+&lt;&lt;list-links filter:&quot;[tag[סגירים]]&quot;&gt;&gt;
+
+
+
+&lt;&lt;englink [[Closers]]&gt;&gt;</pre>
 </div>
 <div created="20170711173812724" modified="20200212210355369" tags="טלוויזיה" title="סדרות">
 <pre>[img[pictures/sdarot.jpg]]
