--- a/english.html
+++ b/english.html
@@ -391,6 +391,8 @@ Error message and password prompt
 
 <li>Cleaning properly</li>
 
+<li>Closers</li>
+
 <li>Coen sister</li>
 
 <li>Coen Sisters</li>
@@ -8980,7 +8982,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Iry claims]] [[Chocolate fudge]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Closers [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9495,7 +9497,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
  &lt;&lt;heblink [[תרנגול הודו אפוי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200216150039212" modified="20200313121702807" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200318190542086" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -10042,6 +10044,22 @@ coming soon as possible
 
 
  &lt;&lt;heblink [[מנקים היטב]]&gt;&gt;
+</pre>
+</div>
+<div created="20200318190359903" modified="20200318190558068" tags="TV [[TV Series]] Films [[On the road to somewhere]]" title="Closers">
+<pre>
+[img[pictures/closers.jpg]]
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[Closers]]&quot;&gt;&gt;
+
+
+
+
+
+ &lt;&lt;heblink [[סגירים]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20200212220505011" modified="20200215162033334" tags="[[Monkeys with car keys]] Children [[A friend]] [[I would like to apologize]]" title="Coen sister">
@@ -11877,7 +11895,6 @@ For example, it seethes me when people use words purposelessly, like the word lo
 </div>
 <div created="20200313120734731" modified="20200313120900837" tags="HH" title="Marina Zoto">
 <pre>
-
 [img[pictures/marina-zuto.jpg]]
 
 
@@ -13149,7 +13166,6 @@ And I say:
 </div>
 <div created="20200313121234753" modified="20200313121413548" tags="HH" title="Stalin's basement">
 <pre>
-
 @@.center.ltr
 [img[למצולמים אין קשר|https://farm4.staticflickr.com/3459/3363312260_b02869fff2_z_d.jpg]]
 
@@ -13570,8 +13586,7 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
  &lt;&lt;heblink [[הדשא של השכן]]&gt;&gt;</pre>
 </div>
 <div created="20200313120244325" modified="20200313120604720" tags="HH" title="The newspaper desk">
-<pre>
-[img[pictures/maarechet-haiton.jpg]]
+<pre>[img[pictures/maarechet-haiton.jpg]]
 
 
 
@@ -14082,8 +14097,7 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 </pre>
 </div>
 <div created="20200313121609318" modified="20200313121724973" tags="[[Dreams that we've dreamt]] Children" title="Umbrella car">
-<pre>
-[img[pictures/oto-mitriya.jpg]]
+<pre>[img[pictures/oto-mitriya.jpg]]
 
 
 
