--- a/english.html
+++ b/english.html
@@ -743,6 +743,8 @@ Error message and password prompt
 
 <li>Mike Leigh</li>
 
+<li>Miles Davis</li>
+
 <li>Mimi of Alfred</li>
 
 <li>Misenplation</li>
@@ -8982,7 +8984,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Closers [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9497,7 +9499,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
  &lt;&lt;heblink [[תרנגול הודו אפוי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200216150039212" modified="20200318190542086" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200319132033267" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -12103,6 +12105,15 @@ I watched T[[HE SCIENCE OF SLEEP|https://www.imdb.com/title/tt0354899/]] and fel
 
 
  &lt;&lt;heblink [[מייק לי]]&gt;&gt;
+</pre>
+</div>
+<div created="20200319131912314" modified="20200319132057313" tags="Music [[Outer sisters]] Films" title="Miles Davis">
+<pre>
+[img[pictures/miles-davis.jpg]]
+
+
+
+ &lt;&lt;heblink [[מיילס דיוויס]]&gt;&gt;
 </pre>
 </div>
 <div created="20200225184220574" modified="20200225184537659" tags="[[Outer sisters]] Films [[Dreams that we've dreamt]] [[True stories]]" title="Mimi of Alfred">
