--- a/index.html
+++ b/index.html
@@ -987,6 +987,8 @@ Error message and password prompt
 
 <li>מיזונפלציה</li>
 
+<li>מיילס דיוויס</li>
+
 <li>מייק לי</li>
 
 <li>מימי של אלפרד</li>
@@ -9190,7 +9192,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="סגירים [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מיילס דיוויס]] סגירים [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9210,7 +9212,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200315170933759" title="$:/temp/search">
+<div created="20161023184814872" modified="20200319131747695" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10593,7 +10595,7 @@ well,
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20200318190310882" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
+<div created="20171216194951924" modified="20200319132129231" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה]]:
@@ -15760,6 +15762,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Misenplation]]&gt;&gt;
 
 </pre>
+</div>
+<div created="20200319131749847" modified="20200319132153591" tags="מוזיקה סרטים [[אחיות חוץ]]" title="מיילס דיוויס">
+<pre>
+[img[pictures/miles-davis.jpg]]
+
+
+
+&lt;&lt;englink [[Miles Davis]]&gt;&gt;</pre>
 </div>
 <div created="20180824161744105" modified="20200225164801251" tags="[[אחיות חוץ]] סרטים" title="מייק לי">
 <pre>[img[pictures/mike-leigh.jpg]]
