closerrs' miles' mental

--- a/index.html
+++ b/index.html
@@ -9183,7 +9183,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200306135212869" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200306141758867" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200319140543871" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9192,7 +9192,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מיילס דיוויס]] סגירים [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[דור הנפש]] [[מיילס דיוויס]] סגירים [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11978,14 +11978,14 @@ Is where I want to be
 
 &lt;&lt;englink [[2 Da Vinci ]]&gt;&gt;</pre>
 </div>
-<div created="20200303102502696" modified="20200313105315846" tags="[[קופים ממונעים]] ילדים" title="דור הנפש">
+<div created="20200303102502696" modified="20200319184631243" tags="[[קופים ממונעים]] ילדים" title="דור הנפש">
 <pre>[img[pictures/mental-generation.jpg]]
 
 
 [[גורה]]:
 
 
-[[SLAM MENTAL|https://www.youtube.com/watch?v=lldS41Px5_s]]
+הדור הזה, שנושא על גבו דורות על גבי דורות של אנושות בלתי מודעת ולא מטופלת. הילדים הללו, אלה הקרויים דור ה-Z, דור המסכים, אלה שמזכירים לנו מידי יום ומבקשים שנבין שגם הנפש עברה אבולוציה. אחרי יותר ממאה שנים מאז פרויד התחיל להעיר אותנו מהתרדמת הנפשית בה היינו שרויים. הדור הזה של עכשיו, מאובחן, כועס, מודע לזכויותיו כילד וכאזרח, מכיר בזכויותיו של האחר ובשונה ממנו עצמו, מתמודד עם גוש עצום ולא מזוהה שמתפוצץ לו בפנים, צועק ומשתולל בחופשיות יחסית [[עוד מאז דור הX|https://www.youtube.com/watch?v=lldS41Px5_s]].
 
 
 
@@ -15763,11 +15763,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20200319131749847" modified="20200319132153591" tags="מוזיקה סרטים [[אחיות חוץ]]" title="מיילס דיוויס">
+<div created="20200319131749847" modified="20200319172127531" tags="מוזיקה סרטים [[אחיות חוץ]]" title="מיילס דיוויס">
 <pre>
 [img[pictures/miles-davis.jpg]]
 
+!!![[יויו]]
 
+ראיתי את [[הסרט|https://www.imdb.com/title/tt9358200/]] המעניין על [[האיש|https://en.wikipedia.org/wiki/Miles_Davis]] והחצוצרה עם הפקק, שהיה [[איש יפה ומצודד|https://www.youtube.com/watch?v=858K1TenEeY]] שלא סובב את הגב לקהל שלו, כי אם סובב את פניו לנגנים. איש ששינה, שגם נפל [[אבל גם קם|https://www.youtube.com/watch?v=FpZHjvFXprk]] וגם צייר ואני לא מבין למה לא הזכירו את [[דו בופ|https://www.youtube.com/watch?v=bH8GeQZTdHk&amp;list=PLIvswYhuuyKqS95j8tzZ1y8HrK5e965a9]] שהשאיר רגע לפני שהלך.
 
 &lt;&lt;englink [[Miles Davis]]&gt;&gt;</pre>
 </div>
@@ -16411,11 +16413,26 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20200318190000717" modified="20200318190443482" tags="[[בדרך לאן שהוא]] סדרות טלוויזיה סרטים" title="סגירים">
+<div created="20200318190000717" modified="20200319193514692" tags="[[בדרך לאן שהוא]] סדרות טלוויזיה סרטים [[הכפר הגלובלי]]" title="סגירים">
 <pre>
 [img[pictures/closers.jpg]]
 
 !!![[גורה]]:
+
+לקראת סוף הפרק האחרון של [[אחוזת דאונטון]] המושלמת, רגע לפני החתונה סוף סוף של לידי אדית', יושבות סבתא קרולי ובתה ליידי רוזמונד, הליידי פונה אל אימה ואומרת:
+
+//
+לא תמיד ציפינו לסוף טוב.//
+
+וסבתא קרולי עונה:
+
+//הסיכון הוא גדול, אבל עם קצת מזל הם יהיו מאושרים למדי, שזו הגרסה הבריטית לסוף טוב.//
+
+הסגיר שקורה בין חג המולד לערב השנה החדשה, הוא סוף נפלא, הקושר את כל קצוות חוטי העלילה של כל אותם גיבורים אותם ליוינו לאורך 6 עונות דרך מלחמת העולם הראשונה והשינויים שהגיעו אחריה. 
+
+סגיר הוא לא סוף כי אם רק נקודה בזמן עד אליה סופר לנו הסיפור, ואני לא יכולה שלא להתייחס עכשיו לרגע בו נמצאים אנו - בני האנוש אשר נמצאים על פני כדור הארץ - רגע בימי קורונה - בו הכפר הגלובלי נשלט על ידי גיבורי ריאליטי - ולשאול:
+
+ אולי אנו בני Toontown נקבל לעת הזו סגיר ראוי לנו, כמו זה של החברים שלנו [[במי הפליל את רוג'ר ראביט|https://www.youtube.com/watch?v=5GrUwl1OtoA]]
 
 
 &lt;&lt;list-links filter:&quot;[tag[סגירים]]&quot;&gt;&gt;
