--- a/english.html
+++ b/english.html
@@ -8984,7 +8984,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="Closers [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10048,7 +10048,7 @@ coming soon as possible
  &lt;&lt;heblink [[מנקים היטב]]&gt;&gt;
 </pre>
 </div>
-<div created="20200318190359903" modified="20200318190558068" tags="TV [[TV Series]] Films [[On the road to somewhere]]" title="Closers">
+<div created="20200318190359903" modified="20200319162100372" tags="TV [[TV Series]] Films [[On the road to somewhere]] [[The global village]]" title="Closers">
 <pre>
 [img[pictures/closers.jpg]]
 
