--- a/english.html
+++ b/english.html
@@ -8975,7 +8975,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200315170320757" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200322151526687" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8984,7 +8984,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Closers [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Mental generation]] Closers [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9004,7 +9004,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200315170952235" title="$:/temp/search">
+<div created="20161023184814872" modified="20200322151604226" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10048,9 +10048,27 @@ coming soon as possible
  &lt;&lt;heblink [[מנקים היטב]]&gt;&gt;
 </pre>
 </div>
-<div created="20200318190359903" modified="20200319162100372" tags="TV [[TV Series]] Films [[On the road to somewhere]] [[The global village]]" title="Closers">
-<pre>
-[img[pictures/closers.jpg]]
+<div created="20200318190359903" modified="20200322151529326" tags="TV [[TV Series]] Films [[On the road to somewhere]] [[The global village]]" title="Closers">
+<pre>[img[pictures/closers.jpg]]
+
+
+!!![[Gura]]: 
+
+Towards the end of the last episode of the perfect [[Downton Abbey]], a moment before the wedding of Lady Edith, finally, grandmother Crawley and her daughter lady Rosamund are sitting together. The Lady turns to her mother and says:
+
+//We didn’t always expect a good ending. //
+
+And grandmother Crawley answers:
+//
+It’s a big risk, but with a little luck they will be happy enough, which is the the British version of a happy ending. //
+
+The ending between Christmas Day and New Years Eve is a great ending. It ties all of the open story lines of all of the heroes we have accompanied for six seasons through the first world war and all the changes that followed.
+
+An ending is not an end but a point in time up to which a story has been told. I can’t not relate to the point in time where we - the humans of earth -  are at now, - during the Corona days - in which the global village has been taken over by reality stars - and ask:
+
+Maybe now, us,  the residents of Toontown, will get the ending that we deserve, like the one of our friends in [[Who Framed Roger Rabbit|https://www.youtube.com/watch?v=5GrUwl1OtoA]]. 
+
+
 
 
 
@@ -11896,8 +11914,7 @@ For example, it seethes me when people use words purposelessly, like the word lo
 </pre>
 </div>
 <div created="20200313120734731" modified="20200313120900837" tags="HH" title="Marina Zoto">
-<pre>
-[img[pictures/marina-zuto.jpg]]
+<pre>[img[pictures/marina-zuto.jpg]]
 
 
 
@@ -12043,12 +12060,13 @@ meaning
  &lt;&lt;heblink [[האחיות בלות]]&gt;&gt;
 </pre>
 </div>
-<div created="20200303102617862" modified="20200306124819398" tags="[[Monkeys with car keys]]" title="Mental generation">
+<div created="20200303102617862" modified="20200322151747079" tags="[[Monkeys with car keys]]" title="Mental generation">
 <pre>[img[pictures/mental-generation.jpg]]
 
 
-[[SLAM MENTAL|https://www.youtube.com/watch?v=lldS41Px5_s]]
+!!![[Gura]]:
 
+This generation is carrying on his back generations and generations of unconscious and untreated humanity. These children who are called generation Z, the screen generation, are the ones who remind us every day and ask us to understand that the psyche has also been through an evolution. A hundred years since Freud had started to wake us from the psychic coma we’ve been stuck in. This generation is diagnosed, angry, is aware of its rights as a child and citizen, acknowledges the rights of the other and of whomever is different,  and is dealing with a huge and unidentified mass that is blowing up in its face. This generation is raging and yelling in certain freedom [[ever since generation X|https://www.youtube.com/watch?v=lldS41Px5_s]]. 
 
 
  &lt;&lt;heblink [[דור הנפש]]&gt;&gt;</pre>
@@ -12107,10 +12125,13 @@ I watched T[[HE SCIENCE OF SLEEP|https://www.imdb.com/title/tt0354899/]] and fel
  &lt;&lt;heblink [[מייק לי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200319131912314" modified="20200319132057313" tags="Music [[Outer sisters]] Films" title="Miles Davis">
-<pre>
-[img[pictures/miles-davis.jpg]]
+<div created="20200319131912314" modified="20200322151051180" tags="Music [[Outer sisters]] Films" title="Miles Davis">
+<pre>[img[pictures/miles-davis.jpg]]
 
+
+!!![[Yoyo]]: 
+
+I’ve watched the interesting [[film|https://www.imdb.com/title/tt9358200/]] about the [[man|https://en.wikipedia.org/wiki/Miles_Davis]] with the trumpet with the mute who was a beautiful and enchanting man who didn’t turn his back to his audience, rather turned his face to the players. A man that have changed things, that fell [[but also rose|https://www.youtube.com/watch?v=FpZHjvFXprk]] and also painted, and I don’t understand why they didn’t mention [[Doo Bop|https://www.youtube.com/watch?v=bH8GeQZTdHk&amp;list=PLIvswYhuuyKqS95j8tzZ1y8HrK5e965a9]], that he left just before he was gone. 
 
 
  &lt;&lt;heblink [[מיילס דיוויס]]&gt;&gt;
@@ -13176,8 +13197,7 @@ And I say:
 </pre>
 </div>
 <div created="20200313121234753" modified="20200313121413548" tags="HH" title="Stalin's basement">
-<pre>
-@@.center.ltr
+<pre>@@.center.ltr
 [img[למצולמים אין קשר|https://farm4.staticflickr.com/3459/3363312260_b02869fff2_z_d.jpg]]
 
 ([[cc|https://creativecommons.org/licenses/by-nc-sa/2.0/]]) [[Timo Heuer|https://www.flickr.com/photos/upim/3363312260]]
