--- a/english.html
+++ b/english.html
@@ -593,6 +593,8 @@ Error message and password prompt
 
 <li>Iry claims</li>
 
+<li>Iry's Hawaiian pineapple house</li>
+
 <li>Isadora Duncan</li>
 
 <li>James Gandolfini</li>
@@ -753,6 +755,8 @@ Error message and password prompt
 
 <li>Mocha cake</li>
 
+<li>Mom, grandma and I</li>
+
 <li>Monkeys with car keys</li>
 
 <li>Mothers</li>
@@ -774,6 +778,8 @@ Error message and password prompt
 <li>Nehama Vahetzi</li>
 
 <li>Neta</li>
+
+<li>Non-hunky-dory</li>
 
 <li>Northern Exposure</li>
 
@@ -898,6 +904,8 @@ Error message and password prompt
 <li>Schnitzel</li>
 
 <li>Searching for Iry</li>
+
+<li>Self-made backpacks for shopping at the market</li>
 
 <li>Semolina cake</li>
 
@@ -8984,7 +8992,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="HH [[Mental generation]] Closers [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9499,7 +9507,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
  &lt;&lt;heblink [[תרנגול הודו אפוי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200216150039212" modified="20200319132033267" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200322154648566" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -11287,6 +11295,16 @@ In order of understanding more, I recommend :
 
  &lt;&lt;heblink [[אירי טוענת]]&gt;&gt;</pre>
 </div>
+<div created="20200322154142968" modified="20200322154328920" tags="Children Houses" title="Iry's Hawaiian pineapple house">
+<pre>
+[img[pictures/AMMWBcSauRNlvNUR.JPG]]
+
+
+
+
+ &lt;&lt;heblink [[בית האננס ההוואי של אירי]]&gt;&gt;
+</pre>
+</div>
 <div created="20200219200218714" modified="20200219200528395" tags="[[Iry claims]] [[Outer sisters]]" title="Isadora Duncan">
 <pre>[img[pictures/isadora-duncan.jpg]]
 
@@ -12178,6 +12196,14 @@ The [[Miznon|https://miznon.com/]] that's in the picture is on 30 King George, n
  &lt;&lt;heblink [[עוגת מוקה]]&gt;&gt;
 </pre>
 </div>
+<div created="20200322153745866" modified="20200322153929609" tags="Metafiction Children" title="Mom, grandma and I">
+<pre>
+[img[pictures/PrYBW9yDkBFFqCB6.jpg]]
+
+
+
+ &lt;&lt;heblink [[אימא, סבתא ואני]]&gt;&gt;</pre>
+</div>
 <div created="20200202190317522" modified="20200217211913122" tags="[[TV Series]] TV [[The global village]]" title="Monkeys with car keys">
 <pre>[img[pictures/kofim-memunaim.jpg]]
 
@@ -12305,6 +12331,16 @@ In the years I've lived with [[Sheffy|Nano and I]] , she declared one day that [
 
 
  &lt;&lt;heblink [[נטע]]&gt;&gt;
+</pre>
+</div>
+<div created="20200322154536842" modified="20200322154719826" tags="[[Menopause sisters]]" title="Non-hunky-dory">
+<pre>
+[img[pictures/lo-hevremaniyot.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[לא חברמניות]]&gt;&gt;
 </pre>
 </div>
 <div created="20200213180740266" modified="20200216180821765" tags="[[Outer sisters]] [[TV Series]] TV Films" title="Northern Exposure">
@@ -12999,6 +13035,16 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
 
  &lt;&lt;heblink [[מחפשת את אירי]]&gt;&gt;
 </pre>
+</div>
+<div created="20200322153246231" modified="20200322153527675" tags="[[Dreams that we've dreamt]]" title="Self-made backpacks for shopping at the market">
+<pre>
+[img[pictures/tik-kniyot.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[תיקי גב לקניות שדןדן ויויו הכינו]]&gt;&gt;</pre>
 </div>
 <div created="20200306160158816" modified="20200306160314921" tags="[[Food addicts]] Baking Recipes" title="Semolina cake">
 <pre>[img[pictures/ugat-solet.jpg]]
