--- a/index.html
+++ b/index.html
@@ -9192,7 +9192,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[דור הנפש]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9212,7 +9212,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200322152404348" title="$:/temp/search">
+<div created="20161023184814872" modified="20200322154617346" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10283,11 +10283,16 @@ well,
 
 </pre>
 </div>
-<div created="20170301155222124" modified="20190219161653922" tags="ילדים" title="אימא, סבתא ואני">
+<div created="20170301155222124" modified="20200322154055385" tags="ילדים [[מטא בדיון]]" title="אימא, סבתא ואני">
 <pre>[img[pictures/PrYBW9yDkBFFqCB6.jpg]]
 
 
-זאת דנה. והיא כתבה את הסיפורים שאינם כאן עדיין.</pre>
+זאת דנה. והיא כתבה את הסיפורים שאינם כאן עדיין.
+
+
+
+
+&lt;&lt;englink [[Mom, grandma and I]]&gt;&gt;</pre>
 </div>
 <div created="20180130191838651" modified="20200212211253728" tags="הצוות [[קופים ממונעים]]" title="אימהות">
 <pre>[img[pictures/imahot.jpg]]
@@ -10596,7 +10601,7 @@ well,
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20200322152503482" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
+<div created="20171216194951924" modified="20200322154834115" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה]]:
@@ -10852,13 +10857,19 @@ Is where I want to be
 &lt;&lt;englink [[Bjork]]&gt;&gt;
 </pre>
 </div>
-<div created="20161111220614335" modified="20190219161821746" tags="בתים ילדים" title="בית האננס ההוואי של אירי">
+<div created="20161111220614335" modified="20200322154458702" tags="בתים ילדים" title="בית האננס ההוואי של אירי">
 <pre>[img[pictures/AMMWBcSauRNlvNUR.JPG]]
 
 !!![[גורה]]:
 
 
-ליום הולדתה הרביעי קיבלה אירי מדודתה, שחזרה מביקור בהוואי, בית אננס עשוי בד מרופד. בתוך האננס גרו אבא הוואי, אימא הוואית, בתם הקטנה שלימים הפכה לזהבית נערת הגומי, ובייבי אננס שאירי אהבה להתפאר בו. ב[[ליל הדובונאז']] הלך הבייבי אננס לאיבוד, ואירי לגמרי ממורמרת על זה. מן הצד השני נוסד האתר [[דובונאז' אלסטיק|http://coensisters.org/doobonage.html]] </pre>
+ליום הולדתה הרביעי קיבלה אירי מדודתה, שחזרה מביקור בהוואי, בית אננס עשוי בד מרופד. בתוך האננס גרו אבא הוואי, אימא הוואית, בתם הקטנה שלימים הפכה לזהבית נערת הגומי, ובייבי אננס שאירי אהבה להתפאר בו. ב[[ליל הדובונאז']] הלך הבייבי אננס לאיבוד, ואירי לגמרי ממורמרת על זה. מן הצד השני נוסד האתר [[דובונאז' אלסטיק|http://coensisters.org/doobonage.html]] 
+
+
+
+
+&lt;&lt;englink [[Iry's Hawaiian pineapple house]]&gt;&gt;
+</pre>
 </div>
 <div created="20170701112743899" modified="20200306135901890" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="בצק פריך">
 <pre>[img[pictures/b-parich.jpg]]
@@ -14819,14 +14830,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Eshkol-Wachman movement notation]]&gt;&gt;</pre>
 </div>
-<div created="20181004083402083" modified="20181004091908320" tags="[[האחיות בלות]]" title="לא חברמניות">
+<div created="20181004083402083" modified="20200322154859253" tags="[[האחיות בלות]]" title="לא חברמניות">
 <pre>[img[pictures/lo-hevremaniyot.jpg]]
 
 !!![[אווה]]:
 
 נשגב מבינתי איך [[סוניה]] תמיד מטופחת למשעי  כולל ציפורניים, תוך כדי שהיא אופה, מבשלת ובלבוסטה לעילא על בסיס יומי. יחד עם זה, גם היא, כמו [[ז'נבייב]] וכמוני, לא חברמנית. המקסימום שלנו זה [[גני לוקסמבורג|https://he.wikipedia.org/wiki/%D7%92%D7%A0%D7%99_%D7%9C%D7%95%D7%A7%D7%A1%D7%9E%D7%91%D7%95%D7%A8%D7%92]]. מעולם לא קפצנו משמחה לארגן ציידנית מלאה כל טוב לקראת יציאה לים, אנחנו לא מעוניינות לישון באוהל או בטבע, אנחנו לא אוהבות חול בסנדלים או לדלג על מקלחת. עשינו דברים כאלה בעבר, כשהילדים עוד היו קטנים, והיום אנו מיטיבות לכת בשביל חנויות האופנה, שבסופו בית קפה.
 
-</pre>
+
+
+&lt;&lt;englink [[Non-hunky-dory]]&gt;&gt;</pre>
 </div>
 <div created="20180614102328845" modified="20200226103940541" tags="סדרות טלוויזיה" title="להרוג את איב">
 <pre>[img[pictures/killing-eve.jpg]]
@@ -19704,7 +19717,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170405141252134" modified="20171029224532235" tags="[[חלומות שחלמנו]]" title="תיקי גב לקניות שדןדן ויויו הכינו">
+<div created="20170405141252134" modified="20200322153700095" tags="[[חלומות שחלמנו]]" title="תיקי גב לקניות שדןדן ויויו הכינו">
 <pre>[img[pictures/tik-kniyot.jpg]]
 
 !!![[גורה]]:
@@ -19717,7 +19730,9 @@ Fapina''
 
 את ה&quot;קופסה&quot;, הברזנט, הרצועות והאבזמים, הם לקחו לתופרת, שחיברה לפי בקשתם את הכל. התיקים כוללים מחיצה במרכז התיק. כיס פנימי, כיס קידמי וכיס צדדי קטן ומאובטח.
 
-</pre>
+
+
+&lt;&lt;englink [[Self-made backpacks for shopping at the market]]&gt;&gt;</pre>
 </div>
 <div created="20170404162732372" modified="20200307175725035" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="תפוחי אדמה ובטטות בתנור">
 <pre>[img[pictures/batatot-batanoor.jpg]]
