--- a/english.html
+++ b/english.html
@@ -501,7 +501,11 @@ Error message and password prompt
 
 <li>Garlic and herbs butter</li>
 
+<li>Gassisted living</li>
+
 <li>Genevieve</li>
+
+<li>Gezuntheights</li>
 
 <li>Ghetto`s map</li>
 
@@ -607,6 +611,8 @@ Error message and password prompt
 
 <li>Jeff Bridges</li>
 
+<li>Joe and Norma</li>
+
 <li>John Goodman</li>
 
 <li>John Irving</li>
@@ -660,6 +666,8 @@ Error message and password prompt
 <li>Life is for those who can't deal with drugs</li>
 
 <li>Life is not About Talking</li>
+
+<li>Life style</li>
 
 <li>Lily</li>
 
@@ -981,6 +989,8 @@ Error message and password prompt
 
 <li>The Chinese</li>
 
+<li>The Clinique</li>
+
 <li>The Couscous</li>
 
 <li>The cups we're drinking from</li>
@@ -1000,6 +1010,8 @@ Error message and password prompt
 <li>The Grass</li>
 
 <li>The hierarchy in the refrigerator</li>
+
+<li>The Hostel</li>
 
 <li>The kitchen by Genevieve</li>
 
@@ -9507,7 +9519,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
  &lt;&lt;heblink [[תרנגול הודו אפוי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200216150039212" modified="20200322154648566" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200322161622330" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -10712,6 +10724,13 @@ Or as Alfred used to say:
 
 </pre>
 </div>
+<div created="20200322160521331" modified="20200322160658923" tags="HH Houses" title="Gassisted living">
+<pre>
+[img[pictures/diyur-mugaz.jpg]]
+
+
+ &lt;&lt;heblink [[דיור מוגז]]&gt;&gt;</pre>
+</div>
 <div created="20200213145354960" modified="20200219171845530" tags="[[Coen sister]] Mothers [[The kitchen by Genevieve]] [[Menopause sisters]]" title="Genevieve">
 <pre>[img[pictures/genevieve.jpg]]
 
@@ -10737,6 +10756,17 @@ She loves us and take care of us all. In the end of every working day she moves 
 
 
  &lt;&lt;heblink [[ז'נבייב]]&gt;&gt;</pre>
+</div>
+<div created="20200322160112085" modified="20200322160317256" tags="HH Houses" title="Gezuntheights">
+<pre>
+[img[pictures/JOI7qxUSCqd04xay.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[געזונטהייטס]]&gt;&gt;
+</pre>
 </div>
 <div created="20200226070954178" modified="20200226071112777" tags="[[Here in the Ghetto]]" title="Ghetto`s map">
 <pre>[img[pictures/ghettos-map.jpg]]
@@ -11387,6 +11417,17 @@ I say that I love Jeff Bridges, but more than all he's the [[dude|https://www.im
  
 </pre>
 </div>
+<div created="20200322155655155" modified="20200322155835396" tags="Houses Mothers" title="Joe and Norma">
+<pre>
+[img[pictures/jo-ve-norma.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[ג'ו ונורמה]]&gt;&gt;
+</pre>
+</div>
 <div created="20200213150957064" modified="20200216160940463" tags="[[Outer sisters]] TV [[TV Series]] Films" title="John Goodman">
 <pre>[img[pictures/john-goodman.jpg]]
 
@@ -11669,6 +11710,15 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 
  &lt;&lt;heblink [[החיים זה לא דיבורים]]&gt;&gt;
 
+
+</pre>
+</div>
+<div created="20200322161519320" modified="20200322161704222" tags="Houses" title="Life style">
+<pre>
+[img[pictures/lifestyle.jpg]]
+
+
+ &lt;&lt;heblink [[לייף סטייל]]&gt;&gt;
 
 </pre>
 </div>
@@ -13482,6 +13532,15 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 
 </pre>
 </div>
+<div created="20200322161201000" modified="20200322161331835" tags="Houses Metafiction" title="The Clinique">
+<pre>
+[img[pictures/haklinika.jpg]]
+
+
+
+ &lt;&lt;heblink [[הקליניקה]]&gt;&gt;
+</pre>
+</div>
 <div created="20200215114029313" modified="20200219133323412" tags="Restaurants Meals [[Food addicts]] Kitchens [[The kitchen by Genevieve]]" title="The Couscous">
 <pre>[img[pictures/hacouscous.jpg]]
 
@@ -13634,6 +13693,16 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 
 
 
+</pre>
+</div>
+<div created="20200322160856797" modified="20200322161001897" tags="HH Houses" title="The Hostel">
+<pre>
+[img[pictures/the-hostel.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[ההוסטל]]&gt;&gt;
 </pre>
 </div>
 <div created="20200213161521882" modified="20200219172816749" tags="Meals Kitchens Recipes" title="The kitchen by Genevieve">
