--- a/index.html
+++ b/index.html
@@ -9192,7 +9192,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="HH [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9212,7 +9212,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200322154617346" title="$:/temp/search">
+<div created="20161023184814872" modified="20200322161541007" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10601,7 +10601,7 @@ well,
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20200322154834115" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
+<div created="20171216194951924" modified="20200322161733158" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה]]:
@@ -11001,12 +11001,17 @@ Is where I want to be
 
 &lt;&lt;englink [[Houses]]&gt;&gt;</pre>
 </div>
-<div created="20171207221132771" modified="20181020120612545" tags="בתים אימהות" title="ג'ו ונורמה">
+<div created="20171207221132771" modified="20200322160007767" tags="בתים אימהות" title="ג'ו ונורמה">
 <pre>[img[pictures/jo-ve-norma.jpg]]
 
 !!![[אווה]]:
 
-ג'ו [[ונורמה|סיפורים שסיפרתי לנורמה]] אספו אותי אליהם ואימצו אותי, כשהגעתי בת 18 [[מהנחלה|הנחלה בה גדלתי]] לארץ.</pre>
+ג'ו [[ונורמה|סיפורים שסיפרתי לנורמה]] אספו אותי אליהם ואימצו אותי, כשהגעתי בת 18 [[מהנחלה|הנחלה בה גדלתי]] לארץ.
+
+
+
+&lt;&lt;englink [[Joe and Norma]]&gt;&gt;
+</pre>
 </div>
 <div created="20170225204122418" modified="20200215140001537" tags="[[אחות כהן]]" title="ג'וזף אברואה">
 <pre>[img[pictures/jozef.jpg]]
@@ -11872,7 +11877,7 @@ Is where I want to be
 &lt;&lt;englink [[Gan-Ya]]&gt;&gt;
 </pre>
 </div>
-<div created="20161024180611154" modified="20180704183354210" tags="HH בתים" title="געזונטהייטס">
+<div created="20161024180611154" modified="20200322160443586" tags="HH בתים" title="געזונטהייטס">
 <pre>[img[pictures/JOI7qxUSCqd04xay.jpg]]
 
 !!![[גורה]]:
@@ -11884,7 +11889,13 @@ Is where I want to be
 בקומה אחת בית קפה, [[קפה מילר]] שמו, ולו רחבה ובתוכו [[המספרה|מספרה]], [[חנות דיסקים]] והקפה עצמו.
 לבניין גם מרתף בו גר [[סטלין]], שרת הבניין. במרתף נמצאים גם המחסנים.
 
-געזונטהייטס הוא הזירה המרכזית, [[של כל מה שקרה (אולי) וכל מה שקרה (כמעט) ב HH|HH]]. </pre>
+געזונטהייטס הוא הזירה המרכזית, [[של כל מה שקרה (אולי) וכל מה שקרה (כמעט) ב HH|HH]]. 
+
+
+
+
+&lt;&lt;englink [[Gezuntheights]]&gt;&gt;
+</pre>
 </div>
 <div created="20170409193149814" modified="20200306141724984" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="גרטן תפוחי אדמה">
 <pre>[img[pictures/gratin.jpg]]
@@ -12059,12 +12070,17 @@ different tastes, but there were things we both love: family, work, people in al
 
 &lt;&lt;englink [[David Chase]]&gt;&gt;</pre>
 </div>
-<div created="20170428171750882" modified="20181023114908733" tags="HH בתים" title="דיור מוגז">
+<div created="20170428171750882" modified="20200322160804104" tags="HH בתים" title="דיור מוגז">
 <pre>[img[pictures/diyur-mugaz.jpg]]
 
 !!![[גורה]]:
 
-דיור מוגז [[שבמצפה ראשית|מצפה ראשית]], הוא הפנינה, שהגיעה תודות לצינור של [[אסדת טתיס|ים טתיס]].</pre>
+דיור מוגז [[שבמצפה ראשית|מצפה ראשית]], הוא הפנינה, שהגיעה תודות לצינור של [[אסדת טתיס|ים טתיס]].
+
+
+
+&lt;&lt;englink [[Gassisted living]]&gt;&gt;
+</pre>
 </div>
 <div created="20170415105944150" modified="20200215180027963" tags="[[משפחת באומן]] אימהות" title="דינה זכרה לברכה">
 <pre>[img[pictures/ima-shel-gura.jpg]]
@@ -12445,7 +12461,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;englink [[The neighbor`s grass]]&gt;&gt;</pre>
 </div>
-<div created="20170320180743138" modified="20190416173457100" tags="HH בתים" title="ההוסטל">
+<div created="20170320180743138" modified="20200322161119811" tags="HH בתים" title="ההוסטל">
 <pre>[img[pictures/the-hostel.jpg]]
 
 !!![[גורה]]:
@@ -12456,6 +12472,10 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 במרכז ההוסטל  &quot;סלון&quot; נחמד מלא בספות  וכורסאות ומסכי טלוויזיה ורמקולים ממנו יוצא מטבח.
 
+
+
+
+&lt;&lt;englink [[The Hostel]]&gt;&gt;
 </pre>
 </div>
 <div created="20170514230844769" modified="20200217201449163" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="ההיררכיה במקרר">
@@ -13055,7 +13075,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[The relief is down the road]]&gt;&gt;</pre>
 </div>
-<div created="20161112230916972" modified="20180704183856663" tags="בתים" title="הקליניקה">
+<div created="20161112230916972" modified="20200322161424186" tags="בתים" title="הקליניקה">
 <pre>[img[pictures/haklinika.jpg]]
 
 !!![[אירי]]:
@@ -13067,7 +13087,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 
-
+&lt;&lt;englink [[The Clinique]]&gt;&gt;
 
 </pre>
 </div>
@@ -15028,12 +15048,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Lehamim]]&gt;&gt;</pre>
 </div>
-<div created="20161114183334957" modified="20180704184017113" tags="בתים" title="לייף סטייל">
+<div created="20161114183334957" modified="20200322161758347" tags="בתים" title="לייף סטייל">
 <pre>[img[pictures/lifestyle.jpg]]
 
 ''זה משו''
 
 [[שווה כריתה|כורתים עצים]] [[ופוסט|מחלקים סלולרים]].
+
+
+
+&lt;&lt;englink [[Life style]]&gt;&gt;
 
 </pre>
 </div>
